--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Arms Craft</title>
+        <link rel="icon" href="/img/favicon.png">
     </head>
     <body>
         <canvas id="screen"></canvas>
