Added Stub Code

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>Arms Craft</title>
         <link rel="icon" href="/img/favicon.png">
+        <script src="index.js"></script>
     </head>
     <body>
-        <canvas id="screen"></canvas>
+        <canvas id="c"></canvas>
     </body>
 </html>
