--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Arms Craft</title>
         <link rel="icon" href="/img/favicon.png">
+        <script src="/socket.io/socket.io.js"></script>
         <script src="index.js"></script>
     </head>
     <body>
