--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Arms Craft</title>
         <link rel="icon" href="/img/favicon.png">
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
         <script src="index.js"></script>
     </head>
     <body>
